# wpa

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  GETTING-STARTED.md  LICENSE  README.md  RELEASE-NOTES.md  pyproject.toml  requirements.txt  wp-publish.py  wpa-prd.md
.dev/: checklist-api-post-page-crud.md  checklist-media-user.md  checklist-phase-4-comments-terms.md  release-v0.8.0.md
.github/workflows/: ci.yml
docs/: RELEASE-NOTES-v080.md  remediation-test-results.md  test-remediation-plan.md  wp-cli-command-inventory.md  wp-cli-rest-api-mapping-matrix.md  wpa-development-recommendations.md  wpa-tests-analysis.md
examples/: bootstrap-site.sh
tests/: test_api.py  test_comment.py  test_formatter.py  test_media.py  test_page.py  test_post.py  test_term.py  test_user.py  test_wp_publish.py
wpa/: __init__.py  api.py  cli.py  comment.py  config.py  exceptions.py  formatter.py  media.py  page.py  post.py  publish.py  term.py  user.py
