[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpa"
version = "0.6.0"
description = "WordPress Automation — manage posts, pages, and users via the REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Neil Stoker"},
]
keywords = ["wordpress", "cli", "markdown", "publishing", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "requests",
    "python-frontmatter",
    "markdown",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
wpa = "wpa.cli:main"

[project.urls]
Homepage = "https://github.com/cadentdev/wpa"
Repository = "https://github.com/cadentdev/wpa"
Issues = "https://github.com/cadentdev/wpa/issues"

[tool.setuptools.packages.find]
include = ["wpa*"]

[tool.ruff]
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
